# pytorch

./: CMakeLists.txt  executor.cpp  linear.ll  loader.cpp  mobilenetv3.ll  test_conv.py  test_linear.py  test_mobnet.py
.jenkins/pytorch/: test.sh
aten/: CMakeLists.txt
aten/src/ATen/: CMakeLists.txt  CPUGenerator.cpp  Context.cpp  Context.h  DLConvertor.cpp  Dispatch.h  DynamicLibrary.cpp  LegacyTHFunctionsCPU.cpp  ParallelCommon.cpp  ParallelNative.cpp  ScalarOps.h  TensorUtils.cpp  Utils.h  function_wrapper.py  gen.py  preprocess_declarations.py  record_function.cpp
aten/src/ATen/core/: Tensor.h  (+9 more)
aten/src/TH/: CMakeLists.txt  TH.h  THBlasUtils.h  THGenerateIntTypes.h  THGenerator.hpp
aten/src/THC/: THC.h
aten/src/THCUNN/: THCUNN.h
aten/src/THNN/: THNN.h  init.cpp
binaries/: CMakeLists.txt  nnc_for_mobile.cc
c10/: CMakeLists.txt
c10/core/: CPUAllocator.cpp  DefaultDtype.cpp  GeneratorImpl.cpp
c10/macros/: Macros.h  cmake_macros.h.in
c10/util/: Logging.h  Type.cpp  selective_build.h  string_utils.h
caffe2/: CMakeLists.txt
caffe2/core/: macros.h
caffe2/proto/: jit_mobile.proto  jit_mobile_pb.h
caffe2/serialize/: inline_container.h
caffe2/utils/: CMakeLists.txt
cmake/: Codegen.cmake  Dependencies.cmake  ProtoBuf.cmake  TorchConfig.cmake.in
cmake/public/: protobuf.cmake
scripts/: bloaty.sh  build_android.sh  build_code_analyzer.sh  build_fancy_compiler.sh  build_host_lite.sh  build_jit_lite.sh  build_lite.sh  build_liteinterpreter.sh  build_nnc_assembly.sh
test/: test_jit.py
test/cpp/jit/: CMakeLists.txt  test_adhoc.cpp
test/cpp/lite_interpreter_runtime/: CMakeLists.txt  linear_armv7.s  linear_x86-64.s  mobilenetv3_armv7.s  mobilenetv3_x86-64.s  test_mobile_nnc.cpp
test/mobile/custom_build/: CMakeLists.txt  build.sh  predictor.cpp
test/mobile/nnc/: CMakeLists.txt  test_aot_compiler.sh
test/mobile/op_deps/: CMakeLists.txt  build.sh  simple_ops.cpp
tools/: build_variables.bzl  build_variables.py
tools/autograd/: gen_autograd.py  gen_python_functions.py  gen_trace_type.py  gen_variable_factories.py  gen_variable_type.py
tools/autograd/templates/: VariableType.cpp  VariableType.h  variable_factories.h
tools/code_analyzer/: CMakeLists.txt  op_dependency.cpp
tools/code_analyzer/test/: CMakeLists.txt  simple_ops.cpp
tools/codegen/: gen.py
tools/codegen/api/: python.py  translate.py
tools/jit/: gen_jit_dispatch.py
tools/jit/templates/: register_aten_ops.cpp
tools/setup_helpers/: generate_code.py
torch/: CMakeLists.txt  custom_class.h  library.h  script.h
torch/csrc/: Module.cpp  WindowsTorchApiMacro.h
torch/csrc/autograd/: variable.h
torch/csrc/jit/: argument_spec.h  autodiff.cpp  code_template.h  constants.cpp  custom_operator.h  export.cpp  export_instructions.cpp  export_instructions.h  graph_executor.cpp  graph_executor.h  import.cpp  import_instructions.cpp  import_instructions.h  import_method.cpp  init.cpp  instruction.h  instruction_executor.cpp  instruction_executor.h  interpreter.cpp  interpreter.h  ir.cpp  ir.h  irparser.cpp  netdef_converter.cpp  operator.cpp  python_arg_flatten.cpp  register_ins_ops.cpp  register_prim_ops.cpp  register_special_ops.cpp  tracer.cpp
torch/csrc/lite_interpreter/: CMakeLists.txt  import_instructions.cpp  instruction_executor.cpp  instruction_executor.h  loader.cpp  predictor.cpp  register_ins_ops.cpp
torch/csrc/utils/: variadic.h
(+101 files in other folders)
